# OpsTwin

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: OpsTwin_aiw_Technical_Spec_v0.3.md  SOCIAL_MEDIA_KIT.md  index.md
docs/concepts/: architecture.md  glossary.md  what-is-opstwin.md
docs/getting-started/: quick-start.md
docs/internal/: OpsTwin_Gantree.md  OpsTwin_MVP_Implementation_Plan.md  OpsTwin_PPR_Definition_Plan.md  PPR_Gantree_V4.md
schemas/: telemetry_v1.json
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  diff.py  manifest.py  sim.py  telemetry.py
src/opstwin/: __init__.py  config.py  database.py  redis_client.py
src/opstwin/aiw/: __init__.py  diff_stream.py  manifest.py  schema_registry.py  sse_publisher.py
src/opstwin/policy/: __init__.py  approval_workflow.py  confidence_scorer.py  decision_maker.py  permission_model.py
src/opstwin/simulation/: __init__.py  hybrid_coupler.py  monte_carlo.py
src/opstwin/telemetry/: __init__.py  anomaly_detector.py  event_normalizer.py  sensor_adapter.py  timeseries_db.py
src/ppr/: __init__.py  aiw_protocol.py  data_flow_validator.py  policy_engine.py  simulation_engine.py  telemetry_layer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_e2e_flow.py
tests/unit/: __init__.py  test_aiw.py  test_policy.py  test_simulation.py  test_telemetry.py
