[project]
name = "opstwin"
version = "0.1.0"
description = "OpsTwin: Industrial Digital Twin + Quantum Simulation Integration Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jung Wook Yang", email = "jungwook@example.com"}
]
keywords = ["digital-twin", "aiw", "quantum", "simulation", "iot"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sse-starlette>=1.8.0",
    "asyncpg>=0.29.0",
    "aiokafka>=0.10.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "jsonschema>=4.21.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opstwin", "src/api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/ppr"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
